syntax = "proto3";

package model;
option go_package = "./model";
option java_multiple_files = true;
option java_package = "github.com.jocerdikiawann.sharetrip.model";
option java_outer_classname = "ShareTripProto";

service ShareTrip {
  rpc GetDestination(stream RoutePolyline) returns (stream RoutePolyline) {}
  rpc StreamLocation(stream Point) returns (stream RouteTrip) {}
}

message Point {
  double latitude = 1;
  double longitude = 2;
}

message RoutePolyline {
  repeated Point points = 1;
  string message = 2;
}

message RouteTrip {
  Point location = 1;
  string message = 2;
}
